name:                lambda-blog
version:             0.0.1
cabal-version:       >= 1.2
synopsis:            A fastcgi-based blog system written in Haskell
description:         A fastcgi-based blog system written in Haskell
category:            Web
copyright:           (c) 2009 Michael Zoech
author:              Michael Zoech
stability:           experimental
homepage:            http://github.com/crazymaik/lambda-blog
bug-reports:         http://github.com/crazymaik/lambda-blog/issues
build-type:          Simple
data-files:          
extra-source-files:  

Executable lambda-blog.fcgi
  build-depends:     base >= 4.1, pandoc >= 1.3,
                     HStringTemplate, hslogger >= 1.0.7,
                     parsec, mtl, bytestring, fastcgi,
                     filepath, directory, containers, split,
                     time, old-locale, network, feed, xml, xhtml
  main-is:           Startup.hs
  hs-source-dirs:    src
  ghc-options:       -threaded

